--- a/irs1318vision.service
+++ b/irs1318vision.service
@@ -8,7 +8,7 @@ User=root
 Nice=-10
 # for non-uniform CPUs, like big.LITTLE, you want to select the big cores
 # For OrangePI5 this is 4-7.
-#AllowedCPUs=4-7
+AllowedCPUs=4-7
 ExecStart=/usr/bin/java -Djava.library.path=/usr/local/share/java/opencv4/:/usr/local/lib/ -jar /home/irs/irs1318_vision/build/libs/irs1318_vision-1.0.jar
 Restart=always
 RestartSec=5
